# taskflow

./: .gitignore  .snyk  .travis.yml  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  test_funcs.py  tox.ini
.github/workflows/: tox_runner.yml
taskflow/: __init__.py  defaults.py  flow.py  tasks.py  test_funcs.py  type_helpers.py
taskflow/tasks/: task.py
taskflow/test/: fixtures.py  test_flow.py  test_flow_get_next.py  test_tasks.py  test_type_helpers.py
